--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+}
+
+#sidebar {
+    height: 100%;
+    min-height: 100vh;
+    min-width: 180px;
+}
+
+.my-animation {
+    display: inline-block;
+    margin: 0 0.5rem;
+
+    animation: fast; 
+    animation-duration: 2s; 
+}
+
+.gifName:hover {
+    cursor: pointer ;
+}
